fix text align

--- a/src/main/webapp/static/sc2.css
+++ b/src/main/webapp/static/sc2.css
@@ -19,7 +19,7 @@ body
     text-align: center;
 }
 
-table, ul, dl, .modal
+table, ul, dl
 {
     text-align: initial;
 }
@@ -59,6 +59,11 @@ h4
     position: sticky;
     top: 0;
     background-color: white;
+}
+
+.modal h2
+{
+    flex-grow: 1;
 }
 
 caption
@@ -292,6 +297,11 @@ th.hoverable span
 .popover th
 {
     text-transform: capitalize;
+}
+
+.popover tbody th
+{
+    text-align: left;
 }
 
 @media (min-width: 576px) {
